# terminal_calendar

./: .gitignore  CMakeLists.txt  README.md  TODO.md  border.c  customutils.c  customutils.h  day.c  days.c  days.h  hours.c  hours.h  main.c  week.c  week.h
src/TUI_components/: CMakeLists.txt
src/TUI_components/include/: TUI_aggregator.h  days.h  hours.h  week.h
src/TUI_components/include_TUI_components/: week.h
src/TUI_components/src/: days.c  hours.c  week.c
src/customutils/: CMakeLists.txt
src/customutils/.cache/clangd/index/: customutils.c.461D710447D040A1.idx
src/customutils/src/: customutils.c
src/libical_components/: CMakeLists.txt
src/libical_components/include/: libical_utils.h
src/libical_components/src/: libical_utils.c
